# use-rust-in-other-langs

./: README.md
calculations/: .gitignore  Cargo.toml  README.md  build.rs  calculations.js  calculations_bg.wasm  calculations_bg.wasm.d.ts
calculations/include/: CalculationsJNI.h
calculations/src/: lib.rs
dart-client/: pubspec.yaml
dart-client/lib/: bindings.dart  load_calculations_library.dart
dart_client/: README.md  client.dart
dart_client/.dart_tool/: package_config.json
delphi-client/: README.md  RustDelphi.dpr  RustDelphi.dproj  RustDelphi.dproj.local  RustDelphi.identcache
dotnet-client/: Program.cs  README.md  dotnet-client.csproj
java-client/: .gitignore  CalculationsJNI.java  Main.java  README.md  publish.sh  run.sh
javascript-web-client/: .gitignore  README.md  package-lock.json  package.json  run.sh
javascript-web-client/public/: calculations-loader.js  index.html
nodejs-client/: README.md  client.js  lib.js  package-lock.json  package.json
nodejs-client/tests/: add.test.js
nodejs-client/tests/support/: loadTestFile.js
python-client/: README.md  client.py
ruby-client/: README.md  client.rb
rust-client/: Cargo.toml  README.md
rust-client/src/: main.rs
test-input/: add_inputs.txt
