[package]
name = "calculations"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calculations"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
libc = "0.2.140"
jni = "0.21.1"
